# mycelial

common/src/: lib.rs
console/components/: nodes.tsx
console/components/@types/: client.d.ts
console/components/Flow/: index.tsx
myceliald/src/: runtime.rs
pipe/runtime/: Cargo.toml
pipe/runtime/src/sections/bacalhau/: destination.rs  mod.rs
pipe/section/section_impls/bacalhau/: Cargo.toml
pipe/section/section_impls/bacalhau/src/: api.rs  destination.rs  jobstore.rs  lib.rs
pipe/section/section_impls/bacalhau/testdata/: docker.yaml  process.yaml
